[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/battle_characters/enemies/battle_brain_monster/sprites/brain_monster.png" type="Texture" id=1]
[ext_resource path="res://characters/overworld_characters/enemy_base/enemy_base.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 88.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 2 )

[node name="BattleTriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleTriggerArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
[connection signal="body_entered" from="BattleTriggerArea" to="." method="_on_BattleTriggerArea_body_entered"]
